public class ProductoFisico {
    private double costeEnvio;
    public void ProductoFisico(String nombre, double precio, double costeEnvio) {
        // TODO: Implementar el método
    }
    public double calcularPrecioFinal() {
        // TODO: Implementar el método
    }
}
