@startuml
skinparam classAttributeIconSize 0

class Cliente {
  -idCliente: int
  -{static} contadorId: int = 0
  -nombreCompleto: String
  -direcciones: List<String> = new ArrayList<>()
  -correo: String
  --
  +Cliente(nombreCompleto: String, correo: String)
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -idPedido: int
  -{static} contadorId: int = 0
  -cliente: Cliente
  -productos: List<Producto> = new ArrayList<>()
  --
  +Pedido(cliente: Cliente)
  +agregarProducto(producto: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

abstract class Producto {
  -idProducto: int
  -{static} contadorId: int = 0
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +toString(): String
  +calcularPrecioFinal(): double
}

class ProductoDigital {
  -tamannoDescarga: double
  -licencia: String
  -iva: double
  -descuento: double
  --
  +ProductoDigital(nombre: String, precio: double, tamannoDescarga: double, licencia: String)
  +calcularPrecioFinal(): double
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +calcularPrecioFinal(): double
}

Pedido -- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml